tests/ui/proc_macro_hack.stderr
error: BOOM
 --> $DIR/proc_macro_hack.rs:8:25
  |
8 |     let nine = add_one!(two) + add_one!(2 + 3);
  |                         ^^^
  |
  = note: this error originates in the macro `proc_macro_call` which comes from the expansion of the macro `add_one` (in Nightly builds, run with -Z macro-backtrace for more info)

error: BOOM
 --> $DIR/proc_macro_hack.rs:8:41
  |
8 |     let nine = add_one!(two) + add_one!(2 + 3);
  |                                         ^^^^^
  |
  = note: this error originates in the macro `proc_macro_call` which comes from the expansion of the macro `add_one` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused macro definition: `proc_macro_call`
 --> $DIR/lib.rs:6:1
  |
6 | / #[proc_macro_hack]
7 | | pub use demo_hack_impl::add_one;
  | |_______________________________^
  |
  = note: `#[warn(unused_macros)]` on by default

warning: unreachable expression
 --> $DIR/proc_macro_hack.rs:8:32
  |
8 |     let nine = add_one!(two) + add_one!(2 + 3);
  |                -------------   ^^^^^^^^^^^^^^^ unreachable expression
  |                |
  |                any code following this expression is unreachable
  |
  = note: `#[warn(unreachable_code)]` on by default
  = note: this warning originates in the macro `add_one` (in Nightly builds, run with -Z macro-backtrace for more info)
